Cannot scale textures in compositor #51070

Closed
opened 2017-03-28 18:55:23 +02:00 by Dwight Martin · 21 comments

System Information
Windows 7 and 10

Blender Version
Broken: 2.78c
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Create a new texture in the texture tab. Make the type noise. Open the compositor, add a Texture node, select the noise texture, connect Texture node to a scale node and the scale node to a viewer node. Adjusting the X and Y values have no effect on the texture. Other texture types(distorted noise, marble, etc) can be scaled along X, but not Y.noise_scale.blend

**System Information** Windows 7 and 10 **Blender Version** Broken: 2.78c Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Create a new texture in the texture tab. Make the type noise. Open the compositor, add a Texture node, select the noise texture, connect Texture node to a scale node and the scale node to a viewer node. Adjusting the X and Y values have no effect on the texture. Other texture types(distorted noise, marble, etc) can be scaled along X, but not Y.[noise_scale.blend](https://archive.blender.org/developer/F526595/noise_scale.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dwightmartin

Added subscriber: @dwightmartin
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Hi Dwight,

the noise texture uses a randomizer for generating the noise; this makes it not consistent at all to do scaling etc. This is by design.
If you need to scale a noise typically you would be using Clouds or Distributed Noise. Or you should use an pre-calced image

Jeroen

Hi Dwight, the noise texture uses a randomizer for generating the noise; this makes it not consistent at all to do scaling etc. This is by design. If you need to scale a noise typically you would be using Clouds or Distributed Noise. Or you should use an pre-calced image Jeroen
Author

Jeroen,

If that's the case, okay. But, this was possible in version 2.73a. I don't know when this changed. But here's a tutorial where it was still working: https://www.youtube.com/watch?v=Ra-E0JVkXEI

Thanks,
Dwight

Jeroen, If that's the case, okay. But, this was possible in version 2.73a. I don't know when this changed. But here's a tutorial where it was still working: https://www.youtube.com/watch?v=Ra-E0JVkXEI Thanks, Dwight

Added subscriber: @zeauro

Added subscriber: @zeauro

Change of behaviour is probably relative to a fix in compositor.

You can benefit of auto-regeneration of noïse texture at each frame and scale it by adding a corner pin node between texture node and scale node.
So, I would not say that change is annoying.

Change of behaviour is probably relative to a fix in compositor. You can benefit of auto-regeneration of noïse texture at each frame and scale it by adding a corner pin node between texture node and scale node. So, I would not say that change is annoying.
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Aaron Carlisle self-assigned this 2017-04-15 23:33:36 +02:00
Member

Closing because this is intended behavior as pointed out by @Jeroen-Bakker

Closing because this is intended behavior as pointed out by @Jeroen-Bakker
Author

In #51070#428398, @Blendify wrote:
Closing because this is intended behavior as pointed out by @Jeroen-Bakker

If anyone wonders why I'm not a member of the Blender Cloud, look at this rude, condescending post. It took you a over a month to be a dick. This is why professionals don't use Blender. Great explanation why this was changed. I love both you and jbakker's work. You are wonderful artists.

> In #51070#428398, @Blendify wrote: > Closing because this is intended behavior as pointed out by @Jeroen-Bakker If anyone wonders why I'm not a member of the Blender Cloud, look at this rude, condescending post. It took you a over a month to be a dick. This is why professionals don't use Blender. Great explanation why this was changed. I love both you and jbakker's work. You are wonderful artists.
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

@dwightmartin thank you for your concerns, we have been a little short-handed as far a people to work on the bug tracker but after your comment, I went back and looked and the different Blender versions and also have a few questions. @Jeroen-Bakker I can you, as the compositing expert, explain your reasoning a bit more? I went back and checked Blender versions 2.73a to master and found the issue only started appearing after 2.77. I also checked the release logs (both user and bug fixes and did not see anything that obvious as an intended change) I am also CC'ing @Sergey as most of the changes done in this time period were your own.

@dwightmartin thank you for your concerns, we have been a little short-handed as far a people to work on the bug tracker but after your comment, I went back and looked and the different Blender versions and also have a few questions. @Jeroen-Bakker I can you, as the compositing expert, explain your reasoning a bit more? I went back and checked Blender versions 2.73a to master and found the issue only started appearing after 2.77. I also checked the release logs (both user and bug fixes and did not see anything that obvious as an intended change) I am also CC'ing @Sergey as most of the changes done in this time period were your own.
Aaron Carlisle removed their assignment 2017-05-18 20:39:36 +02:00

Scaling down can not work within the current compositor design. Fixing this issue would mean changing the design completely, which is out of the scope of the bug tracker.

Added note to our TODO list tho.

Thanks for the report, but this is something we have to live with for now.

Scaling down can not work within the current compositor design. Fixing this issue would mean changing the design completely, which is out of the scope of the bug tracker. Added note to our TODO list tho. Thanks for the report, but this is something we have to live with for now.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2017-05-18 21:15:33 +02:00
Member

@Sergey but why did it work in 2.77?

@Sergey but why did it work in 2.77?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

@Blendify, so "squished" part i think we can investigate (as in "resolution" if you wish).

But the aliasing we can't fix.

So basically will try to bring behavior back to what is used to be.

@Blendify, so "squished" part i think we can investigate (as in "resolution" if you wish). But the aliasing we can't fix. So basically will try to bring behavior back to what is used to be.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Brought behavior back to how it was before. But i find this all weak, and some cleaner design (which follows artists' expectations instead of dictating them how to use something) is really needed in compositor.

Brought behavior back to how it was before. But i find this all weak, and some cleaner design (which follows artists' expectations instead of dictating them how to use something) is really needed in compositor.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51070
No description provided.